Traffic-Management-Basics/kiali/00-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - "kiali.icloud2native.com"
    port:
      name: http-kiali
      number: 80
      protocol: HTTP
---
